Preview JPG and header logo fix on mobile theme

--- a/theme/mobile-community-1/css/mobile-menu.css
+++ b/theme/mobile-community-1/css/mobile-menu.css
@@ -10,6 +10,10 @@
 	margin:10px 0;
 }
 
+.top-below-640-px  .logo img {
+	max-height: 59px;
+}
+
 .top-below-640-px  .contact_and_search{
 	width:27.5em;
 	display:inline-block;	
@@ -205,7 +209,7 @@
 }
 
 .top-below-500-px .logo img{
-	width:100%;
+	width: 100%;
 }
 .top-below-500-px .top-buttons {
 	float: left;
